--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <ul>
                     <li>
                         <label>HTML</label>
-                        <progress value="90" max="100"></progress>
+                        <progress value="85" max="100"></progress>
                     </li>
                     <li>
                         <label>CSS</label>
@@ -110,6 +110,10 @@
                     </li>
                     <li>
                         <label>JavaScript</label>
+                        <progress value="85" max="100"></progress>
+                    </li>
+                    <li>
+                        <label>jQuery</label>
                         <progress value="85" max="100"></progress>
                     </li>
                     <li>
@@ -124,10 +128,7 @@
                         <label>小程序</label>
                         <progress value="70" max="100"></progress>
                     </li>
-                    <li>
-                        <label>typescript</label>
-                        <progress value="50" max="100"></progress>
-                    </li>
+                    
                     <!-- <li>
                         <label>react</label>
                         <progress value="40" max="100"></progress>
@@ -235,7 +236,7 @@
                                 [团队]前端部分独立开发
                                 <br />
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                [周期]2-3月
+                                [周期]2-3月，后续长期升级维护开发
                                 <br />
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                                 [描述]<br />
@@ -267,7 +268,7 @@
                                 [团队]3人协作开发
                                 <br />
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                [周期]长期开发维护
+                                [周期]长期升级维护开发
                                 <br />
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                                 [描述]<br />
@@ -299,7 +300,7 @@
                                 [团队]前端部分独立开发
                                 <br />
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                [周期]1-2月
+                                [周期]1-2月，后续长期升级维护开发
                                 <br />
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                                 [描述]<br />
@@ -329,7 +330,7 @@
                                 [团队]前端部分独立开发
                                 <br />
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                [周期]1-2月
+                                [周期]1-2月，后续长期升级维护开发
                                 <br />
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                                 [描述]<br />
@@ -359,7 +360,7 @@
                                 [团队]前端部分独立开发
                                 <br />
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                [周期]开发1月，后续长期维护
+                                [周期]1月，后续长期升级维护开发
                                 <br />
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                                 [描述]<br />
